--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6416,3 +6416,37 @@
     model: Galaxy Note 4
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 10; Mi Note 10 Lite Build/QKQ1.190825.002; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/88.0.4324.152 Mobile Safari/537.36 [FB_IAB/FB4A;FBAV/307.0.0.40.111;]'
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 307.0.0.40.111
+  device:
+    type: phablet
+    brand: Xiaomi
+    model: Mi Note 10 Lite
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Symbol R60 Build/QP1A.190711.020) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.99 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 80.0.3987.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Hotwav
+    model: Symbol R60
+  os_family: Android
+  browser_family: Chrome
