--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9245,6 +9245,8 @@ LeEco:
       model: 'Le Pro 3'
     - regex: '(?:Le ?X526|Le2[_ ]x527|Le 2|X52[67])(?:[);/ ]|$)'
       model: 'Le 2'
+    - regex: 'LEX820'
+      model: 'Le Max 2'
     - regex: 'Le ?X([^;/]+) Build'
       model: 'Le X$1'
     - regex: 'Le ?X([^) ;/]+)'
@@ -9717,7 +9719,7 @@ LG:
       model: 'G3 Beat'
     - regex: 'LG-D724'
       model: 'G3s'
-    - regex: 'LG-H81[158]'
+    - regex: 'LG-H81[1258]'
       model: 'G4'
     - regex: 'LG-H525n?'
       model: 'G4c'
@@ -12731,6 +12733,8 @@ Panasonic:
       model: 'P-smart Keitai'
     - regex: 'P-03E(?:[);/ ]|$)'
       model: 'Eluga P'
+    - regex: 'Eluga[ _]I7(?:_EE)?'
+      model: 'Eluga I7'
     - regex: 'Eluga[ _-]([^;/]+) Build'
       model: 'Eluga $1'
     - regex: 'Eluga[ _-]([^);/]+)[;/)]'
@@ -17744,6 +17748,9 @@ Xiaomi:
     - regex: 'Mi Note 10 Pro'
       model: 'Mi Note 10 Pro'
       device: 'phablet'
+    - regex: 'Mi Note 10 Lite'
+      model: 'Mi Note 10 Lite'
+      device: 'phablet'
     - regex: 'MI[ _]Note[ _]([^;/) ]+)?'
       model: 'MI Note $1'
       device: 'phablet'
@@ -21043,9 +21050,9 @@ Sunstech:
   device: 'tablet'
   model: '$1'
 
-# Hotwav
+# Hotwav (www.hotwav.com)
 Hotwav:
-  regex: '(?:Venus[_ ](?:X[12]|X1[0245679]|R8 PLUS|R[236-9]|R1[028]|X16-1)|Cosmos[ _](?:V8_lite|V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13])|Hot[_ ]6)(?:[);/ ]|$)'
+  regex: '(?:Venus[_ ](?:X[12]|X1[0245679]|R8 PLUS|R[236-9]|R1[028]|X16-1)|Cosmos[ _](?:V8_lite|V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13])|Hot[_ ]6|Symbol (?:X|Max|R60))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Cosmos[ _]V8_lite(?:[);/ ]|$)'
@@ -21058,7 +21065,10 @@ Hotwav:
       model: 'Venus X16'
     - regex: 'Venus[_ ](X[12]|X1[0245679]|R[236-9]|R1[028])(?:[);/ ]|$)'
       model: 'Venus $1'
-    - regex: '(Cosmos[ _](?:V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13]))(?:[);/ ]|$)'
+    - regex: 'Symbol R60'
+      device: 'phablet'
+      model: 'Symbol R60'
+    - regex: '(Cosmos[ _](?:V19_Plus|V2[0-3]|U2|V19|V[569])|Pearl K2|Magic Q8|Magic 5 Plus|Magic (?:[89]|1[13])|Symbol (?:X|Max))(?:[);/ ]|$)'
       model: '$1'
 
 # Tetratab
