feat(device) detect brand Bluboo model: Picasso 4G feat(device) detect brand Meizu model: PRO 5 feat(device) detect brand UMIDIGI model: S2 Lite feat(device) detect brand Highscreen model: Prime L feat(device) detect brand Jinga model: Basco M500 3G feat(device) detect brand Gooweel model: M5 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2986,16 +2986,16 @@ Blackview:
     - regex: '(Alife[ _][PS]1|DM550|Heatwave)'
       model: '$1'
 
-# Bluboo
+# Bluboo (bluboo.tel)
 Bluboo:
-  regex: 'Bluboo|Xfire|Picasso 4G|Maya Build'
+  regex: 'Bluboo|Maya Build|(?:(?<!IQM )Picasso(?: 4G)?|Xfire2?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Maya Build'
       model: 'Maya'
     - regex: 'Xfire2'
       model: 'Xfire 2'
-    - regex: 'Picasso 4G'
+    - regex: 'Picasso(?: 4G)?'
       model: 'Picasso 4G'
     - regex: 'Xfire'
       model: 'Xfire'
@@ -10653,7 +10653,7 @@ Fourel:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO [67]|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|MZ-16 X)(?:[);/ ]|$)'
+  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO [567]|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|MZ-16 X)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -10710,7 +10710,7 @@ Meizu:
       model: 'PRO 7'
     - regex: 'PRO 7 Plus(?:[);/ ]|$)'
       model: 'Pro 7 Plus'
-    - regex: 'PRO ([67])'
+    - regex: 'PRO ([567])'
       model: 'PRO $1'
     - regex: 'M031(?:[);/ ]|$)'
       model: 'MX Dual Core'
@@ -16502,7 +16502,7 @@ Ulefone:
 
 # UMIDIGI or UMI
 UMIDIGI:
-  regex: 'UMI(?:DIGI)?[ _]|(?:A5_Pro|ROME[_ ]X|BISON|hammer_S)(?:[;/) ]|$)'
+  regex: 'UMI(?:DIGI)?[ _]|(?:A5_Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE)(?:[;/) ]|$)'
   device: 'smartphone'
   models:
     - regex: 'A5_Pro'
@@ -16517,6 +16517,8 @@ UMIDIGI:
       model: 'Bison'
     - regex: 'hammer_S'
       model: 'Hammer S'
+    - regex: 'S2 LITE'
+      model: 'S2 Lite'
     - regex: 'UMI_(London|Diamond(?:_X)?)'
       model: '$1'
     - regex: 'UMI(?:DIGI)?[ _]([^/;)]+)(?: Build|[;)])'
@@ -19313,7 +19315,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ](?:Power|F)|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ matrixstyle _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|Fest(?:XL)?(?:-Pro)?|Tasty|Boost3|Boost 3(?: Pro)? SE|Expanse|Hercules|Alpha Rage|VergeM|Ice2)(?:[);/ ]|$)'
+  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ](?:Power|F)|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ matrixstyle _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|Fest(?:XL)?(?:-Pro)?|Tasty|Boost3|Boost 3(?: Pro)? SE|Expanse|Hercules|Alpha Rage|VergeM|Ice2|Prime L)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS])(?:[);/ ]|$)'
@@ -19380,6 +19382,8 @@ Highscreen:
       model: 'Alpha Rage'
     - regex: 'Ice2(?:[);/ ]|$)'
       model: 'Ice 2'
+    - regex: 'Prime L(?:[);/ ]|$)'
+      model: 'Prime L'
 
 # CVTE
 CVTE:
@@ -20743,7 +20747,7 @@ TurboKids:
 
 # Jinga
 Jinga:
-  regex: 'Jinga[-_ ]|(?:(?:Fresh|Optim)4G|Pass(?:Plus|3G)|PicassoNote|Hotz[_ ]M1|WinPRO|Touch4G|Start3G|IGO[ _]L[41]|Basco (?:L3|L[45]00|XS1|S2)|Hit4G)(?:[);/ ]|$)'
+  regex: 'Jinga[-_ ]|(?:(?:Fresh|Optim)4G|Pass(?:Plus|3G)|PicassoNote|Hotz[_ ]M1|WinPRO|Touch4G|Start3G|IGO[ _]L[41]|Basco (?:L3|L[45]00|XS1|S2)|M500-1|Hit4G)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Optim4G(?:[);/ ]|$)'
@@ -20770,6 +20774,8 @@ Jinga:
       model: 'Iron'
     - regex: 'Jinga Basco neo(?:[);/ ]|$)'
       model: 'Basco Neo'
+    - regex: 'M500-1(?:[);/ ]|$)'
+      model: 'Basco M500 3G'
     - regex: '(?:Jinga[ _])?Basco[ _](L[13]|L[45]00|XS1|S2)(?:[);/ ]|$)'
       model: 'Basco $1'
     - regex: 'Jinga Trezor S1 Plus(?:[);/ ]|$)'
@@ -23326,11 +23332,13 @@ Smotreshka:
 
 # Gooweel (gooweel.com)
 Gooweel:
-  regex: 'Gooweel'
+  regex: 'Gooweel| M5 Pro(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Gooweel; (S7);'
       model: '$1'
+    - regex: 'M5 Pro'
+      model: 'M5 Pro'
 
 # Vargo or Ivargo
 Vargo:
