feat(device) detect new brand AG Mobile models: Hashtag, Shine, Chacer feat(device) detect brand Asus models: Fonepad 7 (K01N, K019), MeMO Pad 7 (K017), MeMO Pad 8 (K015) feat(device) detect brand BenQ model: F5 feat(device) detect brand Doogee model: Iron Bone DG750 feat(device) detect brand Explay models: Onyx, Onliner 4 feat(device) detect brand Highscreen models: Spade, Spark 2

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2465,7 +2465,7 @@ Garmin-Asus:
 
 # Asus
 Asus:
-  regex: 'Asus|Transformer|ZenFone Max|MeMOPad 10|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)(?:[);/ ]|$)|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(5[02]0|620|55[2345])KL|ZD55[23]KL|ZS6(?:61|7[01])KS|ZS(6[0236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00[SV]D|P01Y_S'
+  regex: 'Asus|Transformer|ZenFone Max|MeMOPad 10|TF300T|Slider SL101|PadFone|ME302(?:C|KL)|ME301T|ME371MG|ME17(?:1|2V|3X)|(?:K0[01][0-9a-z]|(?:P(?:00[18ACIL]|01[MTVWYZ]|01MA|01T_1|02[13478])(?: Build|\))|X015D|X018D|X003|X00[7ABT]D|Z00D|Z00[MTY]D|Z01[7FGHKMR]D)|K01[579N])(?:[);/ ]|$)|G55[023]KL|ZB(631|602|633|55[135]|50[01])KL|ZC(55[134]|520|600)KL|ZA550KL|ZE(5[02]0|620|55[2345])KL|ZD55[23]KL|ZS6(?:61|7[01])KS|ZS(6[0236]0|55[10])KL|ZB(500KG|601KL)|MeMo Pad FHD 10 LTE|Z00[SV]D|P01Y_S'
   device: 'smartphone'
   models:
     # explicit tablet models
@@ -2493,7 +2493,7 @@ Asus:
     - regex: 'X Pad 10 LTE(?:[);/ ]|$)'
       model: 'X Pad 10 LTE'
       device: 'tablet'
-    - regex: '(?:K01[3A]|K007|K00R)(?:[);/ ]|$)|MeMO Pad 7'
+    - regex: '(?:K01[3A7]|K007|K00R)(?:[);/ ]|$)|MeMO Pad 7'
       model: 'MeMO Pad 7'
       device: 'tablet'
     - regex: 'K01E(?:[);/ ]|$)'
@@ -2502,7 +2502,7 @@ Asus:
     - regex: 'K00U|ME173X(?:[);/ ]|$)'
       model: 'MeMO Pad HD 7'
       device: 'tablet'
-    - regex: '(?:K011|K00L)(?:[);/ ]|$)'
+    - regex: '(?:K01[15]|K00L)(?:[);/ ]|$)'
       model: 'MeMO Pad 8'
       device: 'tablet'
     - regex: 'K014(?:[);/ ]|$)'
@@ -2579,7 +2579,7 @@ Asus:
     - regex: 'K00G(?:[);/ ]|$)'
       model: 'Fonepad Note 6'
       device: 'phablet'
-    - regex: '(?:K012|K00E)(?:[);/ ]|$)'
+    - regex: '(?:K01[2N9]|K00E)(?:[);/ ]|$)'
       model: 'Fonepad 7'
       device: 'phablet'
     - regex: 'K00Z(?:[);/ ]|$)'
@@ -3447,11 +3447,11 @@ BenQ-Siemens:
 
 # BenQ
 BenQ:
-  regex: 'BENQ(?:[ \-])?([a-z0-9]+)|F52_09(?:[);/ ]|$)'
+  regex: 'BENQ(?:[ \-])?([a-z0-9]+)|(?:F52_09|F5_15)(?:[);/ ]|$)'
   device: 'feature phone'
   models:
-    - regex: 'F52_09(?:[);/ ]|$)'
-      model: 'F52'
+    - regex: 'F(52|5)_(?:15|09)(?:[);/ ]|$)'
+      model: 'F$1'
     - regex: 'BENQ(?:[ \-])?([a-z0-9]+)'
       model: '$1'
 
@@ -5014,7 +5014,7 @@ DoCoMo:
 
 # Doogee
 Doogee:
-  regex: 'DOOGEE[ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S40Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2)(?:[);/ ]|$)'
+  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S40Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2|Iron-bone DG750)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Valencia2_)?Y100_Plus(?:[);/ ]|$)'
@@ -5025,6 +5025,8 @@ Doogee:
       model: 'Valencia2 Y100'
     - regex: 'LEO_(DG280)'
       model: 'Leo $1'
+    - regex: 'Iron-bone (DG750)'
+      model: 'Iron Bone $1'
     - regex: '(BL[579]000|S90C)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'X95Pro(?:[);/ ]|$)'
@@ -6023,55 +6025,6 @@ Leotec:
       device: 'tablet'
       model: 'Pulsar $1'
 
-# Explay
-Explay:
-  regex: 'Explay|[\w]+-EXPLAY-FIN|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-3]|RioPlay|Leader|Pulsar|Infinityll|Imperium[78]|Indigo|Lagoon|Tornado(?! 348)(?:3G)?'
-  device: 'tablet'
-  models:
-    - regex: 'ActiveD[ _]7.4[ _]3G'
-      model: 'ActiveD 7.4 3G'
-    - regex: 'Imperium([78])(?:[);/ ]|$)'
-      model: 'Imperium $1 3G'
-    - regex: 'ActiveD[ _]8.2[ _]3G'
-      model: 'ActiveD 8.2 3G'
-    - regex: 'CinemaTV[ _]3G'
-      model: 'CinemaTV 3G'
-    - regex: 'Infinityll'
-      model: 'Infinity II'
-    - regex: 'Informer[ _]([0-9]+(?:[ _]3G)?)'
-      model: 'Informer $1'
-    - regex: 'Surfer[ _]([0-9\.]+(?:[ _]3G)?)'
-      model: 'Surfer $1'
-    - regex: 'sQuad[ _]([0-9\.]+(?:[ _]3G)?)'
-      model: 'sQuad $1'
-    - regex: 'Onliner([1-3])'
-      model: 'Onliner $1'
-    - regex: 'Atlant(?:[);/ ]|$)'
-      device: 'smartphone'
-      model: 'Atlant'
-    - regex: 'Indigo(?:[);/ ]|$)'
-      device: 'smartphone'
-      model: 'Indigo'
-    - regex: 'Pulsar(?:[);/ ]|$)'
-      device: 'smartphone'
-      model: 'Pulsar'
-    - regex: 'Tornado(?:3G)?(?:[);/ ]|$)'
-      device: 'smartphone'
-      model: 'Tornado 3G'
-    - regex: '[\w]+-EXPLAY-FIN'
-      device: 'feature phone'
-      model: 'Fin'
-
-    - regex: 'Lagoon(?:[);/ ]|$)'
-      model: 'Lagoon'
-    - regex: 'Explay[ _-]([^;/]+)(?: Build|[;)])'
-      model: '$1'
-    - regex: 'RioPlay(?:[);/ ]|$)'
-      device: 'smartphone'
-      model: 'Rio Play'
-    - regex: 'Leader'
-      model: 'Leader'
-
 # EvroMedia
 EvroMedia:
   regex: 'EVROMEDIA|Playpad[ _]|PLAY_PAD_PRO_XL|3G NOTE XL'
@@ -6541,6 +6494,58 @@ GoMobile:
       model: 'Go Onyx'
     - regex: 'GO([0-9]{3,4})'
       model: 'Go$1'
+
+# Explay
+Explay:
+  regex: 'Explay|[\w]+-EXPLAY-FIN|ActiveD[ _]|Atlant |Informer[ _][0-9]+|CinemaTV 3G|Surfer[ _][0-9\.]|sQuad[ _][0-9\.]|Onliner[1-4]|RioPlay|Leader|Pulsar|Infinityll|Imperium[78]|Indigo|Lagoon|Tornado(?! 348)(?:3G)?|Onyx(?!_[A-Z]{1,2})'
+  device: 'tablet'
+  models:
+    - regex: 'ActiveD[ _]7.4[ _]3G'
+      model: 'ActiveD 7.4 3G'
+    - regex: 'Imperium([78])(?:[);/ ]|$)'
+      model: 'Imperium $1 3G'
+    - regex: 'ActiveD[ _]8.2[ _]3G'
+      model: 'ActiveD 8.2 3G'
+    - regex: 'CinemaTV[ _]3G'
+      model: 'CinemaTV 3G'
+    - regex: 'Infinityll'
+      model: 'Infinity II'
+    - regex: 'Informer[ _]([0-9]+(?:[ _]3G)?)'
+      model: 'Informer $1'
+    - regex: 'Surfer[ _]([0-9\.]+(?:[ _]3G)?)'
+      model: 'Surfer $1'
+    - regex: 'sQuad[ _]([0-9\.]+(?:[ _]3G)?)'
+      model: 'sQuad $1'
+    - regex: 'Onliner([1-4])'
+      model: 'Onliner $1'
+    - regex: 'Atlant(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Atlant'
+    - regex: 'Indigo(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Indigo'
+    - regex: 'Pulsar(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Pulsar'
+    - regex: 'Tornado(?:3G)?(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Tornado 3G'
+    - regex: 'Onyx(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Onyx'
+    - regex: '[\w]+-EXPLAY-FIN'
+      device: 'feature phone'
+      model: 'Fin'
+
+    - regex: 'Lagoon(?:[);/ ]|$)'
+      model: 'Lagoon'
+    - regex: 'Explay[ _-]([^;/]+)(?: Build|[;)])'
+      model: '$1'
+    - regex: 'RioPlay(?:[);/ ]|$)'
+      device: 'smartphone'
+      model: 'Rio Play'
+    - regex: 'Leader'
+      model: 'Leader'
 
 # Gol Mobile (gol-mobile.com)
 Gol Mobile:
@@ -19315,7 +19320,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ](?:Power|F)|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ matrixstyle _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|Fest(?:XL)?(?:-Pro)?|Tasty|Boost3|Boost 3(?: Pro)? SE|Expanse|Hercules|Alpha Rage|VergeM|Ice2|Prime L)(?:[);/ ]|$)'
+  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ](?:Power|F)|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ matrixstyle _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|Fest(?:XL)?(?:-Pro)?|Tasty|Boost3|Boost 3(?: Pro)? SE|Expanse|Hercules|Alpha Rage|VergeM|Ice2|Prime L|Spade|Spark 2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS])(?:[);/ ]|$)'
@@ -19332,6 +19337,10 @@ Highscreen:
       model: 'Power Five Max'
     - regex: 'Power_Five(?:[);/ ]|$)'
       model: 'Power Five'
+    - regex: 'Spade(?:[);/ ]|$)'
+      model: 'Spade'
+    - regex: 'Spark 2(?:[);/ ]|$)'
+      model: 'Spark 2'
     - regex: 'FestXL-Pro(?:[);/ ]|$)'
       model: 'Fest XL Pro'
     - regex: 'FestXL(?:[);/ ]|$)'
@@ -23417,3 +23426,9 @@ AOpen:
   regex: '(WT(?:22|19)M-FI)(?:[);/ ]|$)'
   device: 'smart display'
   model: 'eTILE $1'
+
+# AG or AG Mobile
+AG Mobile:
+  regex: '(Hashtag|Shine|Chacer)(?:[);/ ]|$)'
+  device: 'smartphone'
+  model: '$1'
