--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6450,3 +6450,37 @@
     model: Symbol R60
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; K01N Build/KVT49L) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Safari/537.36 Instagram 93.1.0.19.102 Android (19/4.4.2; 160dpi; 600x976; asus; K01N; K01N_2; redhookbay; ru_RU; 154400402)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 93.1.0.19.102
+  device:
+    type: phablet
+    brand: Asus
+    model: Fonepad 7
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; K019) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.90 Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 73.0.3683.90
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Asus
+    model: Fonepad 7
+  os_family: Android
+  browser_family: Chrome
