--- a/Tests/fixtures/smartphone-24.yml
+++ b/Tests/fixtures/smartphone-24.yml
@@ -2610,3 +2610,143 @@
     model: M5 Pro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Hashtag) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 74.0.3729.157
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: AG Mobile
+    model: Hashtag
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; Shine) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 74.0.3729.157
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: AG Mobile
+    model: Shine
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; Chacer) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 74.0.3729.157
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: AG Mobile
+    model: Chacer
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; F5_15) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.90 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 73.0.3683.90
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: BenQ
+    model: F5
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; Iron-bone DG750 Build/KOT49H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36 Instagram 77.0.0.20.113 Android (19/4.4.2; 240dpi; 540x960; DG750/DOOGEE; Iron-bone DG750; DG750; mt6592; ru_RU; 139237635)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 77.0.0.20.113
+  device:
+    type: smartphone
+    brand: Doogee
+    model: Iron Bone DG750
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; Onyx) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.76 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 72.0.3626.76
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Explay
+    model: Onyx
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; Spade) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/74.0.3729.157 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 74.0.3729.157
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Highscreen
+    model: Spade
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; Spark 2 Build/KVT49L) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36 Instagram 88.0.0.14.99 Android (19/4.4.2; 240dpi; 480x800; HighScreen; Spark 2; HighScreen; qcom; ru_RU; 149350054)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 88.0.0.14.99
+  device:
+    type: smartphone
+    brand: Highscreen
+    model: Spark 2
+  os_family: Android
+  browser_family: Unknown
