feat(device) detect brand LG models: V20 (LG-US996), Stylus 2 (LG-K520), K51S (LM-K510), Solo LTE (LGL423DL), Stylo 3 Plus (LG-TP450)
feat(device) add tests: Infinix Note 5 (X604), Motorola Moto E4,

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9778,12 +9778,14 @@ LG:
       model: 'PRADA phone L-02D'
     - regex: 'L-07C'
       model: 'Optimus Bright L-07C'
-    - regex: '(?:LG-)?F800(?:S|K|L)?'
+    - regex: '(?:LG-)?F800(?:S|K|L)?|LG-US996'
       model: 'V20'
     - regex: 'LM-Q710(?:\(FGN\)|[\.]?FGN)'
       model: 'Q Stylus Plus'
     - regex: '801LG'
       model: 'Q Stylus'
+    - regex: 'LG-K520'
+      model: 'Stylus 2'
     - regex: 'LM-Q[67]10\.FG(?:[);/ ]|$)'
       model: 'Q7'
     - regex: 'LM-(Q725[KL]|Q610.FGN)(?:[);/ ]|$)'
@@ -9808,6 +9810,8 @@ LG:
       model: 'G Stylo'
     - regex: 'LG-?(?:LS777|L84VL)(?:[);/ ]|$)'
       model: 'Stylo 3'
+    - regex: 'LG-?(TP450)(?:[);/ ]|$)'
+      model: 'Stylo 3 Plus'
     - regex: 'LM-Q710|LML713DL'
       model: 'Stylo 4'
     - regex: '(?:LM-Q720|LGL722DL)(?:[);/ ]|$)'
@@ -9826,6 +9830,8 @@ LG:
       model: 'Premier Pro LTE'
     - regex: 'LM-X525'
       model: 'Q60'
+    - regex: 'LGL423DL'
+      model: 'Solo LTE'
     - regex: 'LM-X210K'
       model: 'X2'
     - regex: 'LG-K580'
@@ -9966,6 +9972,8 @@ LG:
       model: 'K42'
     - regex: 'LM-K500(?:[);/ ]|$)'
       model: 'K51'
+    - regex: 'LM-K510(?:[);/ ]|$)'
+      model: 'K51S'
     - regex: 'LM-K520(?:[);/ ]|$)'
       model: 'K52'
     - regex: 'LM-Q510N(?:[);/ ]|$)'
