--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6484,3 +6484,19 @@
     model: Fonepad 7
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; Infinix X604 Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/86.0.4240.198 Mobile Safari/537.36 GSA/11.36.10.23.arm64
+  os:
+    name: Android
+    version: "10"
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.36.10.23
+  device:
+    type: phablet
+    brand: Infinix
+    model: Note 5
+  os_family: Android
+  browser_family: Unknown
