--- a/Tests/fixtures/smartphone-24.yml
+++ b/Tests/fixtures/smartphone-24.yml
@@ -2750,3 +2750,102 @@
     model: Spark 2
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; LG-US996) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.198 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 86.0.4240.198
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: LG
+    model: V20
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; LG-K520 Build/MMB29M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.66 Mobile Safari/537.36 GSA/11.38.8.23.arm
+  os:
+    name: Android
+    version: 6.0.1
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.38.8.23
+  device:
+    type: smartphone
+    brand: LG
+    model: Stylus 2
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; Moto E (4) Build/NMA26.42-169; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.66 Mobile Safari/537.36 Instagram 167.0.0.24.120 Android (25/7.1.1; 320dpi; 720x11
+  84; motorola; Moto E (4); woods_f; mt6735; pt_BR; 256966589)
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 167.0.0.24.120
+  device:
+    type: smartphone
+    brand: Motorola
+    model: Moto E4
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; LM-K510 Build/PKQ1.190522.001; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/86.0.4240.198 Mobile Safari/537.36 GSA/11.36.10.23.arm
+  os:
+    name: Android
+    version: "9"
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.36.10.23
+  device:
+    type: smartphone
+    brand: LG
+    model: K51S
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; LGL423DL Build/OPM1.171019.026; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.66 Mobile Safari/537.36 GSA/11.38.8.23.arm
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.38.8.23
+  device:
+    type: smartphone
+    brand: LG
+    model: Solo LTE
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; LG-TP450 Build/NRD90U; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/86.0.4240.198 Mobile Safari/537.36 GSA/11.38.8.23.arm
+  os:
+    name: Android
+    version: "7.0"
+    platform: ARM
+  client:
+    type: mobile app
+    name: Google Search App
+    version: 11.38.8.23
+  device:
+    type: smartphone
+    brand: LG
+    model: Stylo 3 Plus
+  os_family: Android
+  browser_family: Unknown
