--- a/Tests/fixtures/smartphone-24.yml
+++ b/Tests/fixtures/smartphone-24.yml
@@ -2785,8 +2785,7 @@
   os_family: Android
   browser_family: Unknown
 -
-  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; Moto E (4) Build/NMA26.42-169; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.66 Mobile Safari/537.36 Instagram 167.0.0.24.120 Android (25/7.1.1; 320dpi; 720x11
-  84; motorola; Moto E (4); woods_f; mt6735; pt_BR; 256966589)
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; Moto E (4) Build/NMA26.42-169; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/87.0.4280.66 Mobile Safari/537.36 Instagram 167.0.0.24.120 Android (25/7.1.1; 320dpi; 720x1184; motorola; Moto E (4); woods_f; mt6735; pt_BR; 256966589)
   os:
     name: Android
     version: 7.1.1
