feat(device) detect brand LG models: Bello 2 (LG-X150), L60 (LG-X145),  Wine Smart H410 (LG-H410), L Bello (LG-D335), LG-Q710AL (Stylo 4),  K30 (LGL322DL), Stylus 3 (LG-M400)
feat(test) add tests: LG V50 ThinQ (LM-V500N)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9683,6 +9683,8 @@ LG:
       model: 'L90'
     - regex: 'LG-D340F8'
       model: 'L70 Tri'
+    - regex: 'LG-X145'
+      model: 'L60'
     - regex: 'LM-X210APM'
       model: 'Phoenix 4'
     - regex: 'LG-P505R'
@@ -9733,10 +9735,16 @@ LG:
       model: 'G8S ThinQ'
     - regex: '901LG(?:[);/ ]|$)'
       model: 'G8X ThinQ'
+    - regex: 'LG-H410(?:[);/ ]|$)'
+      model: 'Wine Smart H410'
     - regex: 'VS501|LM-X120'
       model: 'K20'
     - regex: '(?:LG-)?H502'
       model: 'Magna'
+    - regex: 'LG-X150'
+      model: 'Bello 2'
+    - regex: 'LG-D335'
+      model: 'L Bello'
     - regex: '(?:LG-)?H343'
       model: 'Risio'
     - regex: '(?:LG-)?H650'
@@ -9763,6 +9771,8 @@ LG:
       model: 'Q Stylus Plus'
     - regex: '801LG'
       model: 'Q Stylus'
+    - regex: 'LG-M400'
+      model: 'Stylus 3'
     - regex: 'LM-Q[67]10\.FG(?:[);/ ]|$)'
       model: 'Q7'
     - regex: 'LM-(Q725[KL]|Q610.FGN)(?:[);/ ]|$)'
@@ -9787,7 +9797,7 @@ LG:
       model: 'G Stylo'
     - regex: 'LG-?(?:LS777|L84VL)(?:[);/ ]|$)'
       model: 'Stylo 3'
-    - regex: 'LM-Q710|LML713DL'
+    - regex: 'LM-Q710|LML713DL|LG-Q710AL'
       model: 'Stylo 4'
     - regex: '(?:LM-Q720|LGL722DL)(?:[);/ ]|$)'
       model: 'Stylo 5'
@@ -9819,7 +9829,7 @@ LG:
       model: 'X4+'
     - regex: 'LM-X410(?:\.FN|\(FG\))'
       model: 'K11'
-    - regex: 'LM-X(?:320|410[UP]M)'
+    - regex: 'LM-X(?:320|410[UP]M)|LGL322DL'
       model: 'K30'
     - regex: 'LMX130IM'
       model: 'W10'
